# watch-dog-ai

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  watch-dog-ai.code-workspace
.streamlit/: config.toml
app/: display.py  streamlit_app.py
app copy/: streamlit_app.py
criminals/: criminals.xlsx
scripts/: build_dataset.py  dataset_validator.py  evaluate.py  test_face_recognition.py
services/: alert_engine.py  database.py  detector.py  embeddings.py  motion.py  recognizer.py  risk_engine.py  security_agent.py  vlm_analyzer.py
utilis/: encoder_preload.py  excel_loader.py
