[project]
name = "watchai"
version = "2.0.0"
description = "WatchAI — CCTV Surveillance System with Face Recognition, VLM Scene Analysis, and LangGraph Security Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ── Core vision ───────────────────────────────────────────────────────────
    "dlib==19.24.6",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "huggingface-hub>=1.7.1",
    "numpy",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "setuptools>=82.0.1",
    "ultralytics",
    # ── Dashboard ─────────────────────────────────────────────────────────────
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    # ── VLM / Gemini ──────────────────────────────────────────────────────────
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    # ── LangChain / LangGraph agent ───────────────────────────────────────────
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    # ── Vector DB (semantic search) ───────────────────────────────────────────
    "chromadb>=0.5.0",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
